<resources>
    <string name="open_navdrawer">Open navigation drawer</string>
    <string name="close_navdrawer">Close navigation drawer</string>
    <string name="reload">Reload</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="conversations">Conversations</string>
    <string name="stream">Stream</string>
    <string name="profile">Profile</string>
    <string name="aspects">Aspects</string>
    <string name="activities">Activities</string>
    <string name="liked">Liked</string>
    <string name="commented">Commented</string>
    <string name="mentions">Mentions</string>
    <string name="public_">Public</string>
    <string name="search">Search</string>
    <string name="contacts">Contacts</string>
    <string name="changelog">Changelog</string>
    <string name="statistics">Statistics</string>
    <string name="all_notifications">All Notifications</string>
    <string name="also_commented">Also Commented</string>
    <string name="comment_on_post">Comment on Post</string>
    <string name="deleteme_____1">Liked</string>
    <string name="mentioned">Mentioned</string>
    <string name="reshared">Reshared</string>
    <string name="started_sharing">Started Sharing</string>
    <string name="could_not_retrieve_list_of_pods__appspecific">Error: Could not retrieve list of pods!</string>
    <string name="sorry_need_to_be_connected_to_internet">Sorry, you must be connected to the Internet to proceed</string>
    <string name="confirmation">Confirmation</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="more">More</string>
    <string name="help_license">About | Help</string>
    <string name="followed_tags">Followed Tags</string>
    <string name="public_activities">Public activities</string>
    <string name="reports">Reports</string>
    <string name="share_link_as_text">Share link as text</string>
    <string name="share_screenshot_of_webpage">Share screenshot of webpage</string>
    <string name="take_screenshot_of_webpage">Take screenshot of webpage</string>
    <string name="saving_image_to">Saving image to</string>
    <string name="saving_screenshot_as">Saving screenshot as:</string>
    <string name="link_adress_copied">Link address copied …</string>
    <string name="new_post">New post</string>
    <string name="go_to_top">Go to top</string>
    <string name="search_by_tags_or_persons__appspecific">Search by tags or persons</string>
    <string name="exit_app">Exit app</string>
    <string name="toggle_mobile_desktop_view">Toggle mobile/desktop view</string>
    <string name="share_dotdotdot">Share…</string>
    <string name="by_tags">by tags</string>
    <string name="by_people">by people</string>
    <string name="please_add_a_name">Please add a name</string>
    <string name="share_link_address">Share link address</string>
    <string name="save_image">Save image</string>
    <string name="share_image">Share image</string>
    <string name="open_in_external_browser">Open in external browser…</string>
    <string name="copy_link_adress_to_clipboard">Copy link address to clipboard</string>
    <string name="copy_image_address_to_clipboard">Copy image address to clipboard</string>
    <string name="unable_to_load_image">Unable to load image</string>
    <string name="screenshot_permission__appspecific">You must grant \"Access Storage Permission\" to save screenshots. After that you should
        completely close the app or restart the device. If you don\'t permit the storage access but want to use the
        screenshot function at a later time, you can grant the permission later. Please open then: systemsettings - apps -
        dandelion*. In the permissions section you can grant the \"write storage permission\".</string>
    <string name="image_permission_description__appspecific">You must grant \"Access Storage Permission\" to save/upload images. After that you should
        completely close the app or restart the device. If you don\'t permit the storage access but want to save images
        at a later time, you can grant the permission later. Please open then: systemsettings - apps -
        dandelion*. In the permissions section you can grant the \"write storage permission\".</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="permission_granted_try_again">Permission granted. Please try again.</string>
    <string name="custom_pod">Custom Pod</string>
    <string name="pod_name">Pod name</string>
    <string name="protocol">Protocol</string>
    <string name="pod_address">Pod address</string>
    <string name="missing_value">Missing value</string>
    <string name="jump_to_last_visited_page_in_stream__appspecific">Jump to last visited page in stream?</string>
    <string name="hide_statusbar_in_mainview">Hide statusbar at main view</string>
    <string name="hide_statusbar">Hide statusbar</string>
    <string name="show_title_in_main_view">Show title in the main view</string>
    <string name="show_title">Show title</string>
    <string name="launcher_shortcut">Launcher shortcut</string>
    <string name="top_toolbar_loads_stream__appsp">Top toolbar loads stream</string>
    <string name="click_empty_space_top_toolbar_load_stream__appspecific">Click an empty space in the top toolbar to open the stream</string>
    <string name="appearance">Appearance</string>
    <string name="network">Network</string>
    <string name="pod_settings__appspecfic">Pod settings</string>
    <string name="operability">Operability</string>
    <string name="navigation_drawer">Navigation Slider</string>
    <string name="control_visibility_of_entries_nav_drawer">Control visibility of entries in the navigation drawer</string>
    <string name="user">User</string>
    <string name="general">General</string>
    <string name="admin">Admin</string>
    <string name="theme_and_colors">Theme and Colors</string>
    <string name="control_which_colors_are_used_in_app">Control which colors are used throughout the app</string>
    <string name="primary_colors">Primary Color</string>
    <string name="colors_of_toolbars">Color of the toolbars</string>
    <string name="accent_color">Accent Color</string>
    <string name="color_of_progressbar">Color of the progressbar</string>
    <string name="amoled_mode">AMOLED Mode</string>
    <string name="amoled_mode_description__app_specific">Override colors with AMOLED display friendly black at many parts of the app. You need to restart to toggle this setting. To browse diaspora* in dark you also need to activate the Dark theme, which can be found in your personal diaspora* account settings.</string>
    <string name="extended_notifications">Extended Notifications</string>
    <string name="extendend_notifications_bell_description__appspecific">Extend the notifications bell with a dropdown menu that shows notification categories</string>
    <string name="language_change_restart_description">Change language of this app. Restart app for changes to take effect</string>
    <string name="language">Language</string>
    <string name="system_language">System language</string>
    <string name="control_textsize_of_webview">Control text size of the WebView</string>
    <string name="font_size">Font size</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="huge">Huge</string>
    <string name="load_images">Load images</string>
    <string name="toggle_image_loading_to_save_mobile_data">Toggle image loading to eg. save mobile data</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="control_screen_rotation">Control automatic screen rotation</string>
    <string name="default_">Default</string>
    <string name="sensor_ignore_system_settings">Sensor\n(ignore system settings)</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="load_tor_preset">Load Tor Preset</string>
    <string name="load_proxy_settins_for_tor">Load proxy settings for Tor (Orbot) HTTP Proxy</string>
    <string name="proxy">Proxy</string>
    <string name="enable_proxy">Enable Proxy</string>
    <string name="proxy_dandelion_traffic__appspecific">Proxy dandelion*\'s traffic to circumvent firewalls.\nMay require restart. This might not work on some phones.</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="app_needs_restart_to_disable_proxy_usage">App needs to restart to disable proxy usage</string>
    <string name="orbot_proxy_preset_loaded">Orbot proxy preset loaded</string>
    <string name="open_external_links_with_chrome_custom_tabs_description">Open external links with Chrome Custom Tabs. Chromium, Firefox or Google Chrome needs to be installed in order to use this feature. \nIMPORTANT NOTE: Chrome Custom Tabs do not use configured proxy servers!</string>
    <string name="personal_settings">Personal settings</string>
    <string name="open_diaspora_account_settings__appspecific">Open your diaspora* account settings</string>
    <string name="manage_your_contact_list">Manage your contact list</string>
    <string name="manage_hashtags">Manage Hashtags</string>
    <string name="unfollow_already_followed_hashtags__appspecific">Unfollow already followed hashtags</string>
    <string name="change_account">Change Account</string>
    <string name="loug_warning_description__appspecific">Erase local session data and switch to another diaspora* pod/account</string>
    <string name="logout_warning_description">This will erase all cookies and session data. Do you really want to change your account?</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_webview_cache">Clear WebView cache</string>
    <string name="intellihide_toolbars__appspecific">Automatically hide top and bottom toolbars while scrolling</string>
    <string name="intellihide_toolbars">Intellihide Toolbars</string>
    <string name="app_version_with_arg">App Version: %1$s</string>
    <string name="code_name_witharg">Codename: %1$s</string>
    <string name="dandelion_is_your_companion__appspecific">dandelion* is your companion app for browsing the social network diaspora*. It adds features like useful toolbars and support for proxy servers like the Tor Network to your social experience.</string>
    <string name="contribute_code">Contribute Code!</string>
    <string name="dandelion_is_developed_as_foss__appspecific">dandelion* is developed free as in Freedom and follows the ideas of the diaspora* project. If you want to contribute, go ahead! Currently we are a very small team, so we greatly appreciate any kind of help!</string>
    <string name="get_the_source">Get the source</string>
    <string name="translate_the_app">Translate the App!</string>
    <string name="app_not_available_in_your_lang_translate_with_stringlate">The app is not available in your language? You can change that! Why don\'t you help us by translating it? We use Stringlate to enable anyone to translate the app.</string>
    <string name="let_me_translate">Let me translate</string>
    <string name="give_feedback">Give Feedback!</string>
    <string name="dandelion_still_in_development__appspecific">dandelion* is still in development, so if you have suggestions or any kind of feedback, please use our bug tracker to let us know!</string>
    <string name="report_bugs">Report Bugs</string>
    <string name="spread_the_word">Spread the word!</string>
    <string name="tell_your_friends_about_diaspora__appspecific">Tell your friends and family about diaspora* and #dandelion! Why don\'t you blog about your experiences? We\'d love to hear from you!</string>
    <string name="share_the_app">Share the app</string>
</resources>