<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context="com.github.dfa.diaspora_android.activity.AboutActivity$AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- About -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_about__about"/>

                <TextView
                    android:id="@+id/fragment_about__app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/app_version_with_arg"/>

                <TextView
                    android:id="@+id/fragment_about__app_codename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code_name_witharg"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone"/> <!-- Change later -->

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dandelion_is_your_companion__appspecific"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Contribute Code -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contribute_code"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dandelion_is_developed_as_foss__appspecific"/>

                <Button
                    android:id="@+id/fragment_about__contribute_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/get_the_source"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Translate -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/translate_the_app"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_not_available_in_your_lang_translate_with_stringlate"/>

                <Button
                    android:id="@+id/fragment_about__translate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/let_me_translate"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Give Feedback -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/give_feedback"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dandelion_still_in_development__appspecific"/>

                <Button
                    android:id="@+id/fragment_about__feedback_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/report_bugs"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Spread the Word -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarStyle"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_half">

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spread_the_word"
                    android:layout_marginBottom="8dp"/>

                <com.github.dfa.diaspora_android.ui.HtmlTextView
                    android:id="@+id/fragment_about__spread_the_word_text"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tell_your_friends_about_diaspora__appspecific"/>

                <Button
                    android:id="@+id/fragment_about__spread_the_word_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/share_the_app"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
